[package]
name = "nitinol-inmemory-adaptor"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "^0.1"
thiserror = "^2"

tokio = { version = "^1", default-features = false, features = ["sync"] }
tracing = "^0.1"

[dependencies.nitinol]
git = "https://github.com/HalsekiRaika/nitinol"
rev = "2cb8f29a42605119d62e41030fbf62793ef4481f"
features = ["protocol"]


[dev-dependencies]
tokio = { version = "^1", features = ["time", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

futures = "^0.3"