[package]
name = "nitinol-inmemory-adaptor"
description = "In-memory storage adapter for `nitinol-persistence`."
repository = "https://github.com/HalsekiRaika/nitinol-inmemory-adaptor"
version = "0.1.0"
license = "MIT"
edition = "2021"

[dependencies]
async-trait = "^0.1"
thiserror = "^2"

tokio = { version = "^1", default-features = false, features = ["sync"] }
tracing = "^0.1"

nitinol-core = "=1.0.0"
nitinol-protocol = "=0.1.0"

[dev-dependencies]
nitinol = { version = "=0.4.1", features = ["process", "persistence", "macro"] }

serde = { version = "^1", features = ["derive"] }
serde_json = "^1"

anyhow = "^1"

tokio = { version = "^1", features = ["time", "macros", "rt-multi-thread"] }
tracing-subscriber = { version = "^0.3", features = ["env-filter"] }

futures = "^0.3"